--- a/requirements.txt
+++ b/requirements.txt
@@ -55,6 +55,8 @@ conda-repo-cli @ file:///tmp/build/80754af9/conda-repo-cli_1620168426516/work
 conda-token @ file:///tmp/build/80754af9/conda-token_1620076980546/work
 conda-verify==3.4.2
 contextlib2==0.6.0.post1
+coreapi==2.3.3
+coreschema==0.0.4
 cryptography @ file:///opt/concourse/worker/volumes/live/c515855a-effc-46df-74dc-542901b701da/volume/cryptography_1616769282442/work
 cycler==0.10.0
 Cython @ file:///opt/concourse/worker/volumes/live/da4db94a-3449-4978-4400-64181f888dab/volume/cython_1618435143829/work
@@ -68,7 +70,10 @@ Django==4.0.5
 django-allauth==0.51.0
 django-cors-headers==3.13.0
 django-filter==22.1
+django-templated-mail==1.1.1
 djangorestframework==3.13.1
+djangorestframework-simplejwt==4.8.0
+djoser==2.1.0
 docutils @ file:///opt/concourse/worker/volumes/live/c75adaac-4aab-4f8b-53ac-e2f0ae899bdf/volume/docutils_1617481416178/work
 entrypoints==0.3
 et-xmlfile==1.0.1
@@ -79,9 +84,12 @@ flake8 @ file:///tmp/build/80754af9/flake8_1615834841867/work
 Flask==2.1.2
 fsspec @ file:///tmp/build/80754af9/fsspec_1617959894824/work
 future==0.18.2
+geographiclib==1.52
+geopy==2.2.0
 gevent @ file:///opt/concourse/worker/volumes/live/123efac8-0706-463e-4084-078386897222/volume/gevent_1616772940436/work
 glob2 @ file:///home/linux1/recipes/ci/glob2_1610991677669/work
 gmpy2==2.0.8
+googlemaps==4.6.0
 greenlet @ file:///opt/concourse/worker/volumes/live/de3154a2-fbbd-4797-71f5-5fe8ea617adf/volume/greenlet_1611958369459/work
 h5py==2.10.0
 HeapDict==1.0.1
@@ -99,6 +107,7 @@ ipython-genutils @ file:///tmp/build/80754af9/ipython_genutils_1606773439826/wor
 ipywidgets @ file:///tmp/build/80754af9/ipywidgets_1610481889018/work
 isort @ file:///tmp/build/80754af9/isort_1616355431277/work
 itsdangerous==2.1.2
+itypes==1.2.0
 jdcal==1.4.1
 jedi @ file:///opt/concourse/worker/volumes/live/12a2c347-a8e4-4b62-5b19-dcc92a2254f6/volume/jedi_1606932552286/work
 Jinja2==3.1.2
@@ -234,6 +243,8 @@ singledispatch @ file:///tmp/build/80754af9/singledispatch_1614366001199/work
 six @ file:///opt/concourse/worker/volumes/live/5b31cb27-1e37-4ca5-6e9f-86246eb206d2/volume/six_1605205320872/work
 sniffio @ file:///opt/concourse/worker/volumes/live/1faeb672-6d3f-4f1f-7861-294fcf282962/volume/sniffio_1614030462215/work
 snowballstemmer @ file:///tmp/build/80754af9/snowballstemmer_1611258885636/work
+social-auth-app-django==4.0.0
+social-auth-core==4.3.0
 sortedcollections @ file:///tmp/build/80754af9/sortedcollections_1611172717284/work
 sortedcontainers @ file:///tmp/build/80754af9/sortedcontainers_1606865132123/work
 soupsieve @ file:///tmp/build/80754af9/soupsieve_1616183228191/work
@@ -273,6 +284,7 @@ tzlocal==4.2
 ujson @ file:///opt/concourse/worker/volumes/live/b4182deb-c6ce-4bc8-7783-61027c162049/volume/ujson_1611259506235/work
 uncertainties @ file:///home/conda/feedstock_root/build_artifacts/uncertainties_1626042404254/work
 unicodecsv==0.14.1
+uritemplate==4.1.1
 urllib3 @ file:///tmp/build/80754af9/urllib3_1615837158687/work
 watchdog @ file:///opt/concourse/worker/volumes/live/ba071b65-d6ec-4539-5875-0791be503584/volume/watchdog_1612471127391/work
 wcwidth @ file:///tmp/build/80754af9/wcwidth_1593447189090/work
